--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
                 <div class="icono">
                     <img src="./images/avatar2.png" alt="">
                 </div>
-                <p class="nombre">Melina Beltran</p>
+                <p class="nombre">Maira Melina Beltran</p>
                 <p class="descripcion">
                     Profesional en Administracion
                 </p>
